--- a/html/applications-it.html
+++ b/html/applications-it.html
@@ -6,19 +6,21 @@
 
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/mystyles.css">
-    <title>Elettro AM</title>
+    <title>Elettro AM | Applicazioni</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../assets/images/logo.jpg" alt="Elettro AM" width="350" height="75">
+        <div class="container-fluid ms-3 me-3">
+            <a href="../index.html">
+                <img src="../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 fs-5">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
@@ -37,13 +39,35 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacts-it.html">Contatti</a>
                     </li>
+                    <li class="nav-item py-2">
+                        <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+                        <hr class="d-lg-none my-2 text-white-50">
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            <img src="../assets/icons/it.png" alt="italiano" width="25" height="15">IT
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <img src="../assets/icons/it.png" alt="italiano">IT
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="">
+                                    <img src="../assets/icons/de.png" alt="deutsch">DE
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <h1 class="h6">Hello, I am italian applications!</h1>
 
-    <footer class="bg-dark text-white pt-4">
+    <footer class="text-white bg-dark-blue pt-4 mt-auto">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -66,13 +90,13 @@
                     </a>
                 </div>
             </div>
-        </div>
 
-        <div class="bg-secondary text-center py-2">
-            <p class="mb-0">&copy; 2024 Your Company Name. All Rights Reserved.</p>
+            <div class="text-center py-2">
+                <p class="mb-0">&copy; 2024 Elettro AM di Ardian Mezini. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
 
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
