--- a/html/media-it.html
+++ b/html/media-it.html
@@ -6,43 +6,67 @@
 
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/mystyles.css">
-    <title>Elettro AM</title>
+    <title>Elettro AM | Media</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-            <img src="../assets/images/logo.jpg" alt="Elettro AM" width="350" height="75">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about-it.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="products-it.html">Prodotti</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="applications-it.html">Applicazioni</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Media</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacts-it.html">Contatti</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
+        <div class="container-fluid ms-3 me-3">
+            <a href="../index.html">
+                <img src="../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 fs-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-it.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="products-it.html">Prodotti</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="applications-it.html">Applicazioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Media</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacts-it.html">Contatti</a>
+                    </li>
+                    <li class="nav-item py-2">
+                        <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+                        <hr class="d-lg-none my-2 text-white-50">
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            <img src="../assets/icons/it.png" alt="italiano" width="25" height="15">IT
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <img src="../assets/icons/it.png" alt="italiano">IT
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <img src="../assets/icons/de.png" alt="deutsch">DE
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<h1 class="h6">Hello, I am italian media!</h1>
+    </nav>
+    <h1 class="h6">Hello, I am italian media!</h1>
 
-<script src="js/bootstrap.bundle.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
