--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../images/logo.jpg" alt="Elettro AM" width="350" height="75">
+        <div class="container-fluid ms-3 me-3">
+            <a href="#">
+                <img src="assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 fs-5">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -36,6 +38,28 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/contacts-it.html">Contatti</a>
+                    </li>
+                    <li class="nav-item py-2">
+                        <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+                        <hr class="d-lg-none my-2 text-white-50">
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            <img src="assets/icons/it.png" alt="italiano" width="25" height="15">IT
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <img src="assets/icons/it.png" alt="italiano">IT
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <img src="assets/icons/de.png" alt="deutsch">DE
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
