german pages initialised

--- a/html/de/applications-de.html
+++ b/html/de/applications-de.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/mystyles.css">
-    <title>Elettro AM | Applicazioni</title>
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/mystyles.css">
+    <title>Elettro AM | Anwendungen</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
         <div class="container-fluid ms-3 me-3">
-            <a href="../index.html">
-                <img src="../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
+            <a href="home-de.html">
+                <img src="../../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -20,24 +20,24 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 fs-5">
+                <ul class="navbar-nav ms-auto mb-2 fs-6">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="home-de.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about-it.html">About</a>
+                        <a class="nav-link" href="about-de.html">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products-it.html">Prodotti</a>
+                        <a class="nav-link" href="products-de.html">Produkte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Applicazioni</a>
+                        <a class="nav-link active" aria-current="page" href="#">Anwendungen</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="media-it.html">Media</a>
+                        <a class="nav-link" href="media-de.html">Media</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacts-it.html">Contatti</a>
+                        <a class="nav-link" href="contacts-de.html">Kontakte</a>
                     </li>
                     <li class="nav-item py-2">
                         <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
@@ -46,17 +46,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
-                            <img src="../assets/icons/it.png" alt="italiano" width="25" height="15">IT
+                            <img src="../../assets/icons/de.png" alt="deutsch" width="25" height="15">DE
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">
-                                    <img src="../assets/icons/it.png" alt="italiano">IT
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="">
-                                    <img src="../assets/icons/de.png" alt="deutsch">DE
+                                <a class="dropdown-item" href="../it/applications-it.html">
+                                    <img src="../../assets/icons/it.png" alt="italiano">IT
                                 </a>
                             </li>
                         </ul>
@@ -65,6 +60,7 @@
             </div>
         </div>
     </nav>
+
     <h1 class="h6">Hello, I am italian applications!</h1>
 
     <footer class="text-white bg-dark-blue pt-4 mt-auto">
@@ -83,10 +79,10 @@
                 <div class="col-md-6 text-md-end">
                     <h5>Lingua</h5>
                     <a href="#" class="text-white me-3" title="Italiano">
-                        <img src="../assets/icons/de.png" alt="IT" width="20" height="12">
+                        <img src="../../assets/icons/de.png" alt="IT" width="20" height="12">
                     </a>
                     <a href="#" class="text-white me-3" title="Deutsch">
-                        <img src="../assets/icons/it.png" alt="DE" width="20" height="12">
+                        <img src="../../assets/icons/it.png" alt="DE" width="20" height="12">
                     </a>
                 </div>
             </div>
@@ -97,6 +93,6 @@
         </div>
     </footer>
 
-    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../../js/bootstrap.bundle.js"></script>
 </body>
 </html>
