--- a/html/it/products-it.html
+++ b/html/it/products-it.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/mystyles.css">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/mystyles.css">
     <title>Elettro AM | Prodotti</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
         <div class="container-fluid ms-3 me-3">
-            <a href="../index.html">
-                <img src="../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
+            <a href="home-it.html">
+                <img src="../../assets/images/logo.jpg" alt="Elettro AM" width="225" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -20,12 +20,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 fs-5">
+                <ul class="navbar-nav ms-auto mb-2 fs-6">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="home-it.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about-it.html">About</a>
+                        <a class="nav-link" href="about-it.html">Su di noi</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Prodotti</a>
@@ -44,19 +44,14 @@
                         <hr class="d-lg-none my-2 text-white-50">
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
-                            <img src="../assets/icons/it.png" alt="italiano" width="25" height="15">IT
+                            <img src="../../assets/icons/it.png" alt="italiano" width="25" height="15">IT
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">
-                                    <img src="../assets/icons/it.png" alt="italiano">IT
-                                </a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">
-                                    <img src="../assets/icons/de.png" alt="deutsch">DE
+                                <a class="dropdown-item" href="../de/products-de.html">
+                                    <img src="../../assets/icons/de.png" alt="deutsch">DE
                                 </a>
                             </li>
                         </ul>
@@ -67,6 +62,6 @@
     </nav>
     <h1 class="h6">Hello, I am italian products!</h1>
 
-    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../../js/bootstrap.bundle.js"></script>
 </body>
 </html>
